--- a/Proyectos/MyFirstApp/res/values/strings.xml
+++ b/Proyectos/MyFirstApp/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">My First app</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="edit_message">Escriba Aquí</string>
-    <string name="button_send">Send</string>
+    <string name="edit_message">Mensaje</string>
+    <string name="button_send">Enviar</string>
 
 </resources>
